# SEM

./: CMakeLists.txt  bmp.c  bmp.h  checksuma.c  checksuma.h  decompressed_payload.txt  files.c  files.h  function.c  function.h  k.txt  lzw.c  lzw.h  main.c  makefile  png.c  pngs.h
